TestSuite/errors/err0333.pas
uses System in 'abc';

begin
  p;  
end.